# treaty-mono-repo

./: .gitignore  LICENSE.Apache2  LICENSE.MIT  README.md
docker/: treaty-admin.dockerfile  treaty-my-info.dockerfile  treaty-proxy.dockerfile  treaty.dockerfile
docker-compose/treaty-and-admin/: docker-compose.yml
treaty/: .gitignore  Cargo.toml  FAQ.md  README.md  ROADMAP.md  Settings.toml  build.rs  dockerfile  rocket.toml
treaty-admin/: .gitignore  Cargo.toml  index.html  index.scss
treaty-my-info/: .gitignore  Cargo.toml  index.html
treaty-my-info/notes/: design.md
treaty-my-info/src/: app.rs  con.rs  lib.rs  log.rs
treaty-my-info/src/components/: mod.rs  nav.rs  status.rs  treaty_nav.rs
treaty-my-info/src/pages/: home.rs  login.rs  mod.rs  register.rs  site_admin.rs
treaty-my-info/src/pages/treaty_admin/: coop_hosts.rs  mod.rs
treaty-my-info/src/pages/treaty_admin/behaviors/: mod.rs
treaty-my-info/src/pages/treaty_admin/behaviors/deletes_from_host/: change_behavior.rs  mod.rs  view_pending_deletes.rs
treaty-my-info/src/pages/treaty_admin/behaviors/deletes_to_host/: change_behavior.rs  mod.rs
treaty-my-info/src/pages/treaty_admin/behaviors/updates_from_host/: change_behavior.rs  mod.rs  view_pending_updates.rs
treaty-my-info/src/pages/treaty_admin/behaviors/updates_to_host/: change_behavior.rs  mod.rs
treaty-my-info/src/pages/treaty_admin/common/: mod.rs  select_database.rs  select_table.rs
treaty-my-info/src/pages/treaty_admin/contracts/: accepted.rs  active.rs  generate.rs  mod.rs  pending.rs  send.rs
treaty-my-info/src/pages/treaty_admin/databases/: add.rs  columns.rs  db.rs  enable_coop.rs  get_table_policy.rs  set_table_policy.rs  tables.rs
treaty-my-info/src/pages/treaty_admin/host_info/: generate_info.rs  get_info.rs  mod.rs
treaty-my-info/src/pages/treaty_admin/logs/: mod.rs
treaty-my-info/src/pages/treaty_admin/participants/: add.rs  mod.rs  view.rs
treaty-my-info/src/pages/treaty_admin/settings/: mod.rs
treaty-my-info/src/pages/treaty_admin/sql/: enter_sql.rs  sql_result.rs  sqlx.rs
treaty-my-info/src/pages/treaty_admin/sql/read/: mod.rs
treaty-my-info/src/pages/treaty_admin/sql/write/: mod.rs
treaty-my-info/src/request/: mod.rs  proxy.rs  treaty.rs
treaty/demo/: .gitignore  Cargo.toml
treaty/demo/src/: main.rs  setup.rs
treaty/demo/src/models/: item.rs  list.rs  mod.rs  user.rs
treaty/docs/: demo-proxy.md  demo.md  manual.md  quickstart.md
treaty/proto/: treaty.proto  treaty_proto.md
treaty/src/: crypt.rs  defaults.rs  error.rs  jwt.rs  lib.rs  main.rs  models.rs  settings.rs  treaty_proto.rs  treaty_proto_impl.rs
treaty/src/alt_transport/: mod.rs
treaty/src/alt_transport/http/: client.rs  data.rs  mod.rs
treaty/src/alt_transport/http/client/: contract.rs  database.rs  host.rs  logs.rs  sql.rs
treaty/src/alt_transport/http/client/database/: actions.rs  behavior.rs  participant.rs
treaty/src/alt_transport/http/data/: contract.rs  io.rs
treaty/src/alt_transport/http/info/: mod.rs
treaty/src/data_service_handler/: data_service_handler_actions.rs  grpc.rs  mod.rs
treaty/src/data_service_handler/io/: delete.rs  mod.rs  update.rs
treaty/src/db_interface/: dbi.rs  dbi_actions.rs  mod.rs
treaty/src/db_interface/postgres/: db.rs  mod.rs  part_db.rs  treaty.rs
treaty/src/db_interface/sqlite/: db.rs  mod.rs  part_db.rs  treaty.rs
treaty/src/info_service_handler/: grpc.rs  info_service_handler_actions.rs  mod.rs
treaty/src/query_parser/: mod.rs
treaty/src/query_parser/sqlite/: mod.rs  sqlitelexer.rs  sqlitelistener.rs  sqliteparser.rs  treaty_insert_sqlite_listener.rs  treaty_sqlite_listener.rs
treaty/src/remote/: mod.rs  remote_actions.rs  remote_grpc.rs  remote_http.rs
treaty/src/service/: handler_builder.rs  mod.rs
treaty/src/sql_text/: mod.rs
treaty/src/user_service_handler/: authentication.rs  grpc.rs  mod.rs  user_service_handler_actions.rs
treaty/src/user_service_handler/io/: db.rs  mod.rs  part_db.rs
treaty/treaty-client/: Cargo.toml
treaty/treaty-client-wasm/: Cargo.toml
treaty/treaty-client-wasm/src/: client.rs  lib.rs  log.rs  token.rs
treaty/treaty-client/src/: client_actions.rs  grpc.rs  http.rs  lib.rs
treaty/treaty-client/src/grpc/: interceptors.rs  mod.rs
treaty/treaty-http-endpoints/: Cargo.toml
treaty/treaty-http-endpoints/src/: lib.rs
treaty/treaty-proxy/: Cargo.toml  Settings.toml
treaty/treaty-proxy/proxy-demo/: Cargo.toml
treaty/treaty-proxy/src/: grpc_client.rs  lib.rs  main.rs  proxy_grpc.rs  user_info.rs
treaty/treaty-proxy/src/proxy_grpc/: data.rs  info.rs  mod.rs  user.rs
treaty/treaty-proxy/src/proxy_server/: account.rs  execute.rs  mod.rs  process.rs
treaty/treaty-proxy/src/repo/: mod.rs  sqlite_repo.rs
treaty/treaty-proxy/src/sql_text/: sqlite.rs
treaty/treaty-tests/: Cargo.toml  notes.md
treaty/treaty-tests/certs/: README.md  make_cert.sh.bak
treaty/treaty-tests/src/: common_contract_setup.rs  lib.rs
treaty/treaty-tests/src/harness/: grpc.rs  http.rs  mod.rs  proxy.rs
treaty/treaty-tests/src/harness/test_common/: mod.rs
treaty/treaty-tests/src/runner/: mod.rs
treaty/treaty-tests/tests/: auth_for_token.rs  db_setup.rs  db_setup_delete.rs  db_setup_insert.rs  get_coop_hosts.rs  get_db_names.rs  get_db_names_grpc_postgres.rs  get_db_names_http_postgres.rs  get_host_info.rs  get_participants.rs  get_set_logical_storage_policy.rs  get_settings.rs  has_table.rs  policy_shared_mirror.rs  proxy_create_db.rs  proxy_register_account.rs  proxy_token.rs  read_write_host.rs  reject_host.rs  revoke_token.rs  validate_delete_behaviors.rs  validate_update_behaviors.rs  validate_update_with_log.rs
treaty/treaty-types/: Cargo.toml  build.rs
treaty/treaty-types/src/: auth.rs  enums.rs  lib.rs
treaty/treaty-types/src/formatter/: mod.rs
treaty/treaty-types/src/formatter/markdown/: contract.rs  db.rs  host.rs  mod.rs  rows.rs  table.rs
treaty/treaty-types/src/proxy/: mod.rs  request_type.rs
treaty/treaty-types/src/proxy/server_messages/: http.rs  mod.rs
treaty/treaty-types/src/types/: treaty_proto.rs
(+59 files in other folders)
