[package]
name = "treaty-my-info"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty-types = { path = "../treaty/treaty-types"}
treaty-http-endpoints = { path = "../treaty/treaty-http-endpoints"}
treaty-client-wasm = { path = "../treaty/treaty-client-wasm" }
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"
serde_json = "1"
wasm-bindgen-futures = "0.4"
yew-router = "0.17"
js-sys = "0.3"
futures-util = "0.3"
num-traits = "0.2.15"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
    "HtmlSelectElement",
    "console",
]

