[package]
name = "treaty"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Randy Le <randyL04@hey.com>"]
description = "A data sharing API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = [
    "column_decltype",
    "bundled",
    "bundled-sqlcipher",
] }
treaty-http-endpoints = { path = "./treaty-http-endpoints" }
treaty-types = { path = "./treaty-types" }
thiserror = "1"
serde = "1"
serde_derive = "1"
config = "0.13.1"
num-derive = "0.4.1"
num-traits = "0.2.15"
num = "0.4.0"
tracing = "0.1"
chrono = "0.4.24"
tonic = {version = "0.10.2", features = ["tls"] }
prost = "0.12.0"
guid-create = "0.3.1"
substring = "1.4.5"
stdext = "0.3.1"
sodiumoxide = "0.2.7"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
antlr-rust = "0.3.0-beta"
async-trait = "0.1.68"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.96"
endianness = "0.2.0"
triggered = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rocket = { version = "0.5.0", features = ["json", "tls"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
local-ip-address = "0.5.3"
bincode = "1.3.3"
rand = "0.8.5"
dotenvy = "0.15.7"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tonic-async-interceptor = "0.10.0"
hyper = { version = "1.0.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
postgres = "0.19.7"


[build-dependencies]
tonic-build = "0.10"
prost-build = { version = "0.12.2" }


[workspace]
members = [
    # A proxy for multiple treaty instances on a single instance.
    "treaty-proxy",
    # A general client for user communications to a treaty instance.
    "treaty-client",
    # A WASM version for general user communications to a treaty instance (incomplete compared to treaty-client). 
    "treaty-client-wasm",
    # A singular lib for http endpoints.
    "treaty-http-endpoints",
    # A general catch-all lib for:
    # - generating the proto file (this is for WASM compat; we cannot use prost for WASM)
    # - formatting messages
    # - standard enums used across all libs
    "treaty-types",
    # integration tests
    "treaty-tests",
    # this lib
    ".",
]
exclude = ["demo", "proxy-demo"]
