[package]
name = "demo"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty-client = { path = "../treaty-client" }
treaty-types = { path = "../treaty-types" }
treaty = { path = ".." }
tokio = { version = "1", features = ["full"] }
stdext  = "0.3"

[workspace]
