[package]
name = "treaty-client-wasm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty-types = { path = "../treaty-types" }
treaty-http-endpoints = { path = "../treaty-http-endpoints" }
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.83"
serde_json = "1"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"
tonic-web-wasm-client = "0.3"
prost = "0.11.5"
tonic = { version = "0.8.3", default-features = false, features = [
    "prost",
    "codegen",
] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = [
    "prost",
] }
