[package]
name = "treaty-client"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty = { path = "../../treaty" }
treaty-http-endpoints = { path = "../treaty-http-endpoints" }
treaty-types = { path = "../treaty-types"}
tonic = "0.8.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
thiserror = "1.0.40"
stdext  = "0.3"
tracing = "0.1"
async-trait = "0.1.68"
num-derive = "0.3.3"
num-traits = "0.2.15"
num = "0.4.0"

