[package]
name = "treaty-client"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty = { path = "../../treaty" }
treaty-http-endpoints = { path = "../treaty-http-endpoints" }
treaty-types = { path = "../treaty-types"}
tonic = "0.10.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.40"
stdext  = "0.3"
tracing = "0.1"
async-trait = "0.1.68"
num-derive = "0.4.1"
num-traits = "0.2.15"
num = "0.4.0"
bincode = "1.3.3"
tokio = "1.32.0"
async-recursion = "1.0.5"
