[package]
name = "treaty-proxy"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treaty = { path = ".." }
treaty-types = { path = "../treaty-types"}
serde_json = "1"
serde = "1"
serde_derive = "1"
thiserror = "1.0.38"
tracing = "0.1"
config = "0.13.3"
tonic = "0.8.3"
rusqlite = { version = "0.29.0", features = ["column_decltype", "bundled", "bundled-sqlcipher"] }
ignore-result = "0.2.0"
uuid = { version = "1.3.0", features = ["v4"] }
tonic-reflection = "0.6.0"
tokio = { version = "1", features = ["full"] }
triggered = "0.1.2"
chrono = "0.4.24"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
ignore = "0.4.20"
stdext = "0.3"
tracing-subscriber = "0.3"
num = "0.4.0"
num_enum = "0.6.1"
