[package]
name = "treaty-types"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.1.0"
tracing = "0.1.37"
num = "0.4.0"
num-derive = "0.4.1"
num-traits = "0.2.15"
substring = "1.4.5"
num_enum = "0.7.1"
regex = "1.8.3"

[build-dependencies]
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.8.3"
